css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    font-size: 15px;
    color: #666;
    font-weight: 400;
    line-height: 28px;
    font-family: Ubuntu, sans-serif;
    background-color: #fafafa;
}

h1, h2, h3, h4, h5, p {
    margin: 10px 0;
}

h3 {
    font-weight: 300 !important;
    color: #888;
}

hr {
    margin: 20px 0;
    border: 1px solid #eee;
}

ul li {
    margin-left: 20px;
}

a {
    color: #3ba1d0;
    text-decoration: none;
}

.header {
    height: 150px;
    background-color: #3ba1d0;
}

.heading {
    background-color: #f5f5f5;
    padding: 20px;
}

.wrapper {
    z-index: 2;
    width: 60%;
    position: relative;
    margin: 0 auto;
    top: -100px;
    background-color: #fff;
    min-height: 400px;
    border: 1px solid #f5f5f5;
    margin-bottom: 40px;
}

.my-profile {
    max-width: 90%;
    height: auto;
    border-radius: 0;
    border: 2px solid #f5f5f5;
}

.muted {
    color: #999;
}

.about {
    padding: 20px;
    display: flex;
}

.about div {
    width: 33%;
}

.skill {
    display: inline-block;
    background-color: #f5f5f5;
    padding: 5px 15px;
    margin-bottom: 10px;
}
.icon {
    display: inline-block;
    margin-right: 5px; 
}

.footer {
    text-align: center;
    position: absolute;
    width: 100%;
    padding: 20px;
    bottom: 0 !important;
    background-color: #f5f5f5;
}

.tag {
    position: absolute;
    left: 0;
    color: #fff;
    font-weight: bold;
    font-style: italic;
    background-color: #3ca1d0;
    height: 50px;
    padding: 0 10px;
    line-height: 50px;
    width: 200px;
}

.shape-tag {
    width: 15px;
    position: absolute;
    left: 200px;
    border-bottom: 50px solid #3ca1d0;
    border-right: 14px solid transparent;
}

.hire {
    text-align: center;
    font-weight: bold;
}

.hire img {
    display: block;
    width: 100px;
}

.right {
    float: right;
}

.modal {
    display: none;
    position: fixed;
    z-index: 10;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.6); 
}

.modal-content, .modal-header {
    padding: 20px;
    margin: auto;
    width: 50%;
    background-color: #fff;
}

.modal-header {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background-color: #3ba1d0;
    height: 60px;
    line-height: 20px;
    color: #fff;
    font-weight: bold;
}

.close {
    color: #eee;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover, .close:focus {
    color: #fff;
    cursor: pointer;
    text-decoration: none;
}

.section {
    display: flex;
    padding: 20px;
}

.section-head {
    width: 30%;
    color: #ccc;
}

.section-desc {
    width: 70%;
}

.section-desc table {
    border: 1px solid #f5f5f5;
    border-collapse: collapse;
    margin-bottom: 20px;
    width: 100%;
}

.section-desc table td, th {
    padding: 5px;
    border: 1px solid #f5f5f5;
}

.section-desc table th {
    text-align: right;
    background-color: #f5f5f5;
}

.section-desc td {
    color: #999;
}

.article {
    margin: 10px 0;
}

.article footer {
    color: #999;
}

.quotes {
    color: #999;
    font-style: italic;
}

@media only screen and (max-width: 768px) {
    .wrapper {
        width: 90%;
    }
}

@media only screen and (max-width: 600px) {

    body {
        font-size: 13px;
        line-height: 22px;
    }

    .wrapper {
        width: 96%;
    }

    .heading h1 {
        font-size: 22px;
    }

    .heading span {
        display: block;
    }

    .my-profile {
        max-width: 100%
    }

    .section {
        display: block;
        padding: 10px;
    }

    .section-head, .section-desc {
        width: 100%;
    }

    .about {
        display: block;
    }

    .about div {
        width: 100%;
    }

    .tag, .shape-tag {
        display: none;
    }

    .hire {
        font-size: 13px;
    }

    .hire img {
        width: 75px;
    }
}

